<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/criteria_category_text">

        <MultiSelectListPreference
            android:defaultValue="@array/criteria_type_values"
            android:entries="@array/criteria_type_entries"
            android:entryValues="@array/criteria_type_values"
            android:key="multi_select_list_types"
            android:title="@string/criteria_types_title"
            app:icon="@drawable/ic_baseline_local_activity_24" />

        <SeekBarPreference
            app:icon="@drawable/ic_baseline_directions_walk_24"
            app:key="criteriaDistanceSeekBar"
            android:max="10"
            app:min="1"
            app:defaultValue="2"
            app:showSeekBarValue="true"
            app:title="@string/criteria_distance_label" />

    </PreferenceCategory>

</PreferenceScreen>