<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nl.thairosi.activityx.ui.home.HomeFragment">

    <data>
        <variable
            name="NavigationViewModel"
            type="nl.thairosi.activityx.ui.navigation.NavigationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navigationConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/navigationRevealButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigation_reveal_button"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/navigationDistanceLineView"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:background="@color/gold_700"
            app:layout_constraintBottom_toTopOf="@+id/navigationCompassImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/navigationRevealButton" />

        <ImageView
            android:id="@+id/navigationDestinationImage"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:contentDescription="@string/navigation_distance_image"
            android:paddingBottom="100dp"
            android:src="@drawable/ic_activity_x_direction"
            app:layout_constraintBottom_toTopOf="@+id/navigationCompassImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/navigationDistanceLineView" />

        <ImageView
            android:id="@+id/navigationCompassImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="150dp"
            android:contentDescription="@string/navigation_compass_image"
            android:src="@drawable/ic_compass"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/navigationRevealButton" />

        <ImageView
            android:id="@+id/navigationArrowImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="150dp"
            android:contentDescription="@string/navigation_arrow_image"
            android:src="@drawable/ic_compass_direction"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/navigationRevealButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>